# data-to-science

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  backend.example.env  db.example.env  default.vcl  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.example.yml  docker-compose.prod.example.yml  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.yml  frontend.example.env  mkdocs.yml  otel-collector-config.yaml  pg_tileserv.toml  pyproject.toml  requirements.txt
backend/: .dockerignore  .git-blame-ignore-revs  README.md  alembic.ini  backend-start.sh  backend.dockerfile  environment.lock.yml  environment.yml  flower-start.sh  mypy.ini  pyproject.toml  pytest.ini  worker-start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 01b7986f768b_add_jobs_table.py  072c3b0d1571_make_file_ids_unique_for_file_.py  11e9a690f189_add_table_to_track_uploads.py  13a5c7acda9d_initial_migration_with_postgis.py  13b80df8f03f_add_bbox_crs_resolution_to_data_products.py  16f7f3c9ff02_add_boolean_is_superuser_column_to_user_.py  18275fe01c4f_drop_tiger_schema_and_other_unused_.py  1c8d558efdd9_set_team_id_to_null_on_delete.py  1dd90e71b448_add_extension_tables.py  1ddad0ea3f41_initial_migration_with_uuids.py  1eb594bba349_add_fields_for_tracking_project_s_.py  2560a312a401_add_api_key_table.py  257669f1a6b6_add_column_for_demo_user_accounts_to_.py  25ba36a2da61_add_table_for_tracking_disk_usage_stats.py  27624a9b6278_add_breedbase_table.py  2a22701f800f_first_migration_for_group_table.py  30430c513b9b_update_datetime_fields_to_use_timezone.py  314a512083ba_unique_constraint_for_metadata.py  331ef9521713_add_extra_column_to_jobs_table.py  33c06c017301_replace_band_info_with_stac_properties.py  3552eff5e070_add_indoor_projects_table.py  36e70891a65f_modify_sensor_options_for_flights.py  377b6d9645d3_add_team_member_table.py  38847d7554f3_initial_migration_for_projects_flights_.py  3bf88d6f9581_drop_center_x_and_center_y_requirement_.py  3c64d6b416c6_first_migration.py  3cdca8dad784_drop_enum_for_flight_platform_and_data_.py  404ae3bff216_include_center_x_y_coordinates_with_.py  40cd2be380aa_initial_migration.py  44b3aa232bea_reinitialize_tables.py  45875ccd4674_add_is_published_column_to_projects.py  4834cb625e90_rename_id_column_to_feature_id.py  4a88cfdc3876_add_relation_between_job_and_data_.py  4d943270328e_first_migration.py  560e396bce4f_add_indoor_project_to_project_type_enum.py  57c24be56c4e_first_migration_with_sqlalchemy2_.py  586ba69a2a5a_add_table_for_tracking_email_.py  5c0f233cab5a_add_module_types_and_project_modules.py  6073062cc3fe_rename_data_path_column_to_filepath_in_.py  650f5bac362f_initial_users_table_migration.py  (+59 more)
backend/app/: README.md  celeryworker_pre_start.py  extensions.py  main.py  middleware.py  tasks.py  telemetry.py  update_team_member_role.py  worker.py
backend/app/api/: deps.py  extras.py  mail.py  utils.py
backend/app/core/: celery_app.py  config.py  exceptions.py  limiter.py  logging.py  mail.py  security.py  utils.py
backend/app/crud/: __init__.py  base.py  crud_admin.py  crud_api_key.py  crud_breedbase_connection.py  crud_campaign.py  crud_data_product.py  crud_data_product_like.py  crud_data_product_metadata.py  crud_data_product_view.py  crud_dataset.py  crud_disk_usage_stats.py  crud_extension.py  crud_file_permission.py  crud_flight.py  crud_group.py  crud_iforester.py  crud_indoor_project.py  crud_indoor_project_data.py  crud_job.py  crud_location.py  crud_metrics.py  crud_project.py  crud_project_like.py  crud_project_member.py  crud_project_module.py  crud_raw_data.py  crud_refresh_token.py  crud_shortened_url.py  crud_team.py  crud_team_member.py  crud_upload.py  crud_user.py  crud_user_style.py  crud_vector_layer.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  activity_snapshot.py  api_key.py  breedbase_connection.py  campaign.py  confirmation_token.py  constants.py  data_product.py  data_product_like.py  data_product_metadata.py  data_product_view.py  dataset.py  disk_usage_stats.py  extension.py  file_permission.py  flight.py  group.py  iforester.py  indoor_project.py  indoor_project_data.py  job.py  location.py  module_type.py  project.py  project_like.py  project_member.py  project_module.py  project_type.py  raw_data.py  refresh_token.py  shortened_url.py  team.py  (+8 more)
backend/celery/: beat-start.sh  flower-start.sh  worker-start.sh
backend/pc-gltf-viewer/: index.html  index.js  style.css
(+1086 files in other folders)
