[tool.poetry]
name = "ps2"
version = "0.1.0"
description = "FastAPI with PostgreSQL support environment"
authors = ["Ben Hancock <hancocb@purdue.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
python-jose = {extras = ["crytography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
faker = "^18.10.1"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.16"
pydantic = {extras = ["email"], version = "^1.10.9"}
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
