[tool.poetry]
name = "ps2"
version = "0.1.0"
description = "FastAPI with PostgreSQL support environment"
authors = ["Ben Hancock <hancocb@purdue.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.101.1"
python-jose = {extras = ["crytography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
faker = "^18.10.1"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.16"
pydantic = "2.3.0"
alembic = "^1.11.1"
python-multipart = "^0.0.6"
geoalchemy2 = "^0.14.0"
shapely = "^2.0.1"
celery = "^5.3.1"
redis = "^5.0.0"
flower = "^2.0.1"
geopandas = "^0.13.2"
email-validator = "^2.0.0.post2"
geojson-pydantic = "^1.0.0"
pydantic-settings = "^2.0.3"
aiofiles = "^23.2.1"
fastapi-mail = {extras = ["aioredis"], version = "^1.4.1"}
staticmap = "^0.5.7"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
mypy = "^1.3.0"
pytest = "^7.3.2"
types-python-jose = "^3.3.4.7"
types-passlib = "^1.7.7.12"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
types-psycopg2 = "^2.9.21.10"
types-aiofiles = "^23.2.0.0"

[tool.black]
target-version = ["py311"]
extend-exclude = """
(
    versions  # alembic db migrations
)
"""

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/core/*"]
src_paths = ["app"]

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
